Routes added. Code readability improved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ server.port=8080
 management.endpoints.web.exposure.include=*
 
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.routes[0].id=auth-api-route
+spring.cloud.gateway.routes[0].uri=lb://auth-api
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/**
+
+spring.cloud.gateway.routes[1].id=file-api-route
+spring.cloud.gateway.routes[1].uri=lb://file-api
+spring.cloud.gateway.routes[1].predicates[0]=Path=/files/**
+
+spring.cloud.gateway.routes[2].id=song-api-route
+spring.cloud.gateway.routes[2].uri=lb://song-api
+spring.cloud.gateway.routes[2].predicates[0]=Path=/song/**
+
